--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -1,9 +1,12 @@
 INCDIRS = -I../../include
 LIBDIRS = -L../db
 
-OBJS =	cli.o		\
-	cli_graph.o	\
-	lex.o		\
+OBJS =	cli.o			\
+	cli_graph.o		\
+	cli_graph_edge.o	\
+	cli_graph_schema.o	\
+	cli_graph_vertex.o	\
+	lex.o			\
 	main.o
 
 LIBS = -ldb
