--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -5,6 +5,7 @@ OBJS =	cli.o			\
 	cli_graph.o		\
 	cli_graph_edge.o	\
 	cli_graph_schema.o	\
+	cli_graph_tuple.o	\
 	cli_graph_vertex.o	\
 	lex.o			\
 	main.o
