--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -4,9 +4,9 @@ LIBDIRS = -L../db
 
 OBJS =	bufdump.o 			\
 	cli.o				\
-	cli_component.o			\
 	cli_enum.o			\
 	cli_graph.o			\
+	cli_graph_component.o		\
 	cli_graph_edge.o		\
 	cli_graph_new.o			\
 	cli_graph_schema.o		\
