Renamed _join operations to _union

--- a/src/db/Makefile
+++ b/src/db/Makefile
@@ -3,19 +3,19 @@ include ../Makefile.rules
 OBJS =	component.o		\
 	component_project.o	\
 	component_select.o	\
-	component_join.o	\
+	component_union.o	\
 	component_sssp.o	\
 	edge.o			\
 	edge_read.o		\
 	edge_write.o		\
 	enum.o			\
-	enum_join.o		\
+	enum_union.o		\
 	enum_list_read.o	\
 	enum_list_write.o	\
 	graph.o			\
 	graph_import.o		\
 	schema.o		\
-	schema_join.o		\
+	schema_union.o		\
 	schema_read.o		\
 	schema_write.o		\
 	string_pool.o		\
