Setup build system for graph import code

--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.rules
 
-LIBDIRS = -L../db
+LIBDIRS = -L../db -L../import
 
 OBJS =	bufdump.o 			\
 	cli.o				\
@@ -19,16 +19,18 @@ OBJS =	bufdump.o 			\
 	lex.o				\
 	main.o
 
-LIBS = -ldb
+LIBS = -ldb -limport
 TGT = db
 
 all: $(OBJS)
 	cd ../db; make;
+	cd ../import; make;
 	$(CC) $(LIBDIRS) $(GDB) -o $(TGT) $(OBJS) $(LIBS)
 
 clean:
 	cd ../db; make clean;
+	cd ../import; make clean;
 	rm -f $(TGT) $(OBJS)
 
 wc: clean
-	wc -l ../../include/*.h ../db/*.c *.c
+	wc -l ../../include/*.h ../db/*.c ../import/*.c *.c
