Additions for cli_graph_component_neighbors() and cli_graph_connected()

--- a/src/db/Makefile
+++ b/src/db/Makefile
@@ -2,6 +2,7 @@ include ../Makefile.rules
 
 OBJS =	component.o			\
 	component_connected.o		\
+	component_neighbors.o		\
 	component_project.o		\
 	component_select.o		\
 	component_union.o		\
